--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,27 +19,27 @@ block content
 	.container-fluid: .jumbotron.index-bg
 		.row
 			.row-same-height
-				.col-sm-6
+				.col-sm-6.col-lg-4
 					img(src='/images/Jasper and Keisha.JPG').center-block.col-sm-height.img-responsive
-				.col-sm-6.text-center.col-middle
-					.col-middle
-						h3.heading.heading_left 
-							strong Ask The Principal
-						p.heading__sub
-							strong We want to hear from you! Any pressing topics that you would like the principal to discuss on the air are fair game.
-						a.btn.btn-lg.btn-primary(href='/contact') Tell us what's on your mind?
-						br
-						br
-						hr
-						if user && user.canAccessKeystone
-							p
-								a(href='/keystone/signin').btn.btn-default Open the Admin Panel
-						else
-							p The default Admin user email is <strong>user@keystonejs.com</strong> and the password is <strong>admin</strong>.
-							p
-								a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
-								|  to use the Admin Panel.
-						hr
+				.col-sm-6.col-lg-8.text-center.col-middle
+					//- .col-middle
+						//- h3.heading.heading_left 
+						//- 	strong Ask The Principal
+						//- p.heading__sub
+						//- 	strong We want to hear from you! Any pressing topics that you would like the principal to discuss on the air are fair game.
+						//- a.btn.btn-lg.btn-primary(href='/contact') Tell us what's on your mind?
+						//- br
+						//- br
+						//- hr
+						//- if user && user.canAccessKeystone
+						//- 	p
+						//- 		a(href='/keystone/signin').btn.btn-default Open the Admin Panel
+						//- else
+						//- 	p The default Admin user email is <strong>user@keystonejs.com</strong> and the password is <strong>admin</strong>.
+						//- 	p
+						//- 		a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
+						//- 		|  to use the Admin Panel.
+						//- hr
 			.row-same-height
 				.col-sm-12.text-center.col-middle
 					h4 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
