--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -56,8 +56,8 @@ block content
 				.col-sm-12
 					if user && user.canAccessKeystone
 						p.text-center
-							a(href='/keystone/signin').btn.btn-default Open the Admin Panel
+							a(href='/keystone/signin').btn.btn-default.btn-primary Open Admin Panel
 					else
 						p.text-center
 							a(href='/keystone/signin', style='margin-right: 10px').btn.btn-lg.btn-primary Sign in
-							|  to use the Admin Panel.
+							|  to Admin Panel
